tweak openai hyperparameters

--- a/notebooks/0.1-eirike-pdf-parsing.ipynb
+++ b/notebooks/0.1-eirike-pdf-parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,75 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1: CHAPTER\n",
-      "\n",
-      "\n",
-      "\n",
-      "2: The Rise of Platform Ecosystems 1\n",
-      "\n",
-      "\n",
-      "\n",
-      "3: May you live in interesting times.\n",
-      "Ancient Chinese curse\n",
-      "\n",
-      "\n",
-      "\n",
-      "4: IN THIS CHAPTER\n",
-      "\n",
-      "\n",
-      "\n",
-      "5: (cid:129) What platforms are and what they are not\n",
-      "\n",
-      "\n",
-      "\n",
-      "6: (cid:129) Core components of platform ecosystems\n",
-      "\n",
-      "\n",
-      "\n",
-      "7: (cid:129) Drivers of the migration toward platforms in diverse industries\n",
-      "\n",
-      "\n",
-      "\n",
-      "8: 1.1 THE WAR OF ECOSYSTEMS\n",
-      "Blackberry had everything going right. It had fanatically loyal customers and its products were inno-\n",
-      "vative, well engineered, durable, and got raving reviews from critics. After years of commanding a\n",
-      "lion’s share (about 50%) of the smartphone market that it largely created, it had trouble breaking past\n",
-      "a 1% market share with its newest products by 2012, leading to its subsequent downfall Blackberry\n",
-      "assumed that the problem was Apple and then Google—both industry outsiders—who had since\n",
-      "entered the fray. So, it did what made sense: Price more competitively, invest more in developing\n",
-      "new products, upgrade its operating system, and step up marketing. Nothing worked. Its error was fail-\n",
-      "ing to realize that the basis for competition had changed: It was no longer Blackberry against Apple\n",
-      "smartphones. Instead, it was the Blackberry ecosystem against the iOS ecosystem. It was not one prod-\n",
-      "uct against another but Blackberry’s army of 8000 external innovators against Apple’s 200,000. Black-\n",
-      "berry’s mistake was failing to realize the ecosystem on which its continued success depended. All three\n",
-      "companies made good products, but the lack of enough innovative apps muted Blackberry’s market\n",
-      "potential. It was already too late to catch up by the time Blackberry realized that the competitive blue-\n",
-      "print had shifted. The Red Queen effect1—the need to run faster just to stay in the same place—had\n",
-      "taken over.\n",
-      "\n",
-      "\n",
-      "\n",
-      "9: Platforms are creating an entirely new blueprint for competition—one that puts ecosystems in head-\n",
-      "to-head competition. The ongoing migration from product and service competition to platform-based\n",
-      "competition in many industries and markets is driven by forces—packetization of products, services,\n",
-      "and activities; software embedding and ubiquitous networking of everyday objects; and the increased\n",
-      "need for specialization—that are increasingly infusing characteristics of the software industry into\n",
-      "\n",
-      "\n",
-      "\n",
-      "10: ☆“To view the full reference list for the book, click here or see page 283.”\n",
-      "1As the next chapter explains, one competitor successfully adopting a platform-centric approach can compress an entire\n",
-      "industry’s innovation clockspeed, requiring much greater effort just to stay in the same place.\n",
-      "\n",
-      "\n",
-      "\n"
+      "Total paragraphs: 386\n",
+      "Actual paragraphs: 109\n"
      ]
     }
    ],
@@ -117,34 +57,73 @@
     "in_file = read_file('../data/raw/Chapter-1---The-Rise-of-Platform-Ecosystems_2014_Platform-Ecosystems.pdf')\n",
     "paragraphs = get_paragraphs(in_file)\n",
     "\n",
-    "for i in range(10):\n",
-    "    print(f\"{i + 1}: {paragraphs[i]['paragraph']}\\n\\n\")"
+    "print(f\"Total paragraphs: {len(paragraphs)}\")\n",
+    "print(f\"Actual paragraphs: {len([p for p in paragraphs if len(p['paragraph']) > 30])}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'openai_interface'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../src/models/openai_interface\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenai_interface\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OpenAIInterface\n\u001b[1;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m OpenAIInterface()\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'openai_interface'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.insert(0, '../')\n",
+    "from typing import List\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "from openai import OpenAI\n",
+    "from src.api_integrations.interfaces.llm_generic_interface import LLMGenericInterface\n",
     "\n",
-    "from openai_interface import OpenAIInterface\n",
     "\n",
-    "model = OpenAIInterface()"
+    "class OpenAIInterface(LLMGenericInterface):\n",
+    "    \n",
+    "    client = None\n",
+    "        \n",
+    "    def __init__(self):\n",
+    "        self.setup()\n",
+    "        \n",
+    "    def setup(self, environment: bool = False):\n",
+    "        if not environment:\n",
+    "            dotenv_path = find_dotenv()\n",
+    "            load_dotenv(dotenv_path)\n",
+    "        \n",
+    "        self.client = OpenAI()\n",
+    "            \n",
+    "            \n",
+    "    \n",
+    "    def sys_message(self, message: str):\n",
+    "        return {\"role\": \"system\", \"content\": message}\n",
+    "    \n",
+    "    def user_message(self, message: str):\n",
+    "        return {\"role\": \"user\", \"content\": message}\n",
+    "    \n",
+    "    prompts = {\n",
+    "        \"expert_tutor\": \"You are an expert tutor. Give an extensive and descriptive answer using relevant technical terms and examples.\",\n",
+    "        \"profile_picture\": \"Create an avatar of a happy robot tutor in the course {course_name}. Make the robot be the highlight, with a background displaying a simple pattern\",\n",
+    "        \"summerize_paragraph\": \"Summerize the user's paragraph in one descriptive sentence. Focus on keeping relevant technical terms and keep it short but concise.\",\n",
+    "    }\n",
+    "        \n",
+    "      \n",
+    "    def generic_request(self, query: str, params: dict = None, history_key: str = None) -> str | List[str]:\n",
+    "        completion = self.client.chat.completions.create(\n",
+    "            model=\"gpt-3.5-turbo\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": self.prompts[\"expert tutor\"]},\n",
+    "                {\"role\": \"user\", \"content\": query}\n",
+    "            ]\n",
+    "        )\n",
+    "        \n",
+    "        return completion.choices[0].text\n",
+    "    \n",
+    "    def summerize_paragraph(self, text: str) -> str:\n",
+    "        completion = self.client.chat.completions.create(\n",
+    "            model=\"gpt-4-1106-preview\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": self.prompts[\"summerize_paragraph\"]},\n",
+    "                {\"role\": \"user\", \"content\": text}\n",
+    "            ]\n",
+    "        )\n",
+    "        \n",
+    "        return completion.choices[0].message.content\n",
+    "    \n"
    ]
   },
   {
@@ -156,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,30 +152,30 @@
     "berry’s mistake was failing to realize the ecosystem on which its continued success depended. All three\\\n",
     "companies made good products, but the lack of enough innovative apps muted Blackberry’s market\\\n",
     "potential. It was already too late to catch up by the time Blackberry realized that the competitive blue-\\\n",
-    "print had shifted. The Red Queen effect1—the need to run faster just to stay in the same place—had\\\n",
+    "print had shifted. The Red Queen effect — the need to run faster just to stay in the same place—had\\\n",
     "taken over.\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241m.\u001b[39msummerize_paragraph(example_paragraph)\n\u001b[1;32m      2\u001b[0m response\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original length: 1401, summary length: 279\n",
+      "summary: Despite strong products and a loyal customer base, Blackberry's downfall stemmed from a failure to recognize the shift in competition from individual products to ecosystems, leaving it lagging behind Apple due to a smaller network of innovators and a scarcity of innovative apps.\n"
      ]
     }
    ],
    "source": [
+    "model = OpenAIInterface()\n",
+    "\n",
     "response = model.summerize_paragraph(example_paragraph)\n",
-    "response"
+    "print(f\"original length: {len(example_paragraph)}, summary length: {len(response)}\")\n",
+    "print(f\"summary: {response}\")"
    ]
   }
  ],
