--- a/notebooks/0.1-eirike-pdf-parsing.ipynb
+++ b/notebooks/0.1-eirike-pdf-parsing.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,6 +116,8 @@
     "    def summerize_paragraph(self, text: str) -> str:\n",
     "        completion = self.client.chat.completions.create(\n",
     "            model=\"gpt-4-1106-preview\",\n",
+    "            temperature=0.3,\n",
+    "            top_p=0.1,\n",
     "            messages=[\n",
     "                {\"role\": \"system\", \"content\": self.prompts[\"summerize_paragraph\"]},\n",
     "                {\"role\": \"user\", \"content\": text}\n",
@@ -158,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original length: 1401, summary length: 279\n",
-      "summary: Despite strong products and a loyal customer base, Blackberry's downfall stemmed from a failure to recognize the shift in competition from individual products to ecosystems, leaving it lagging behind Apple due to a smaller network of innovators and a scarcity of innovative apps.\n"
+      "original length: 1401, summary length: 353\n",
+      "summary: Blackberry's downfall was due to its failure to recognize the shift in competition from individual smartphones to the broader ecosystem, resulting in an inability to keep up with Apple's expansive network of innovators and the critical mass of innovative apps, despite making competitive pricing, product development, OS upgrades, and marketing efforts.\n"
      ]
     }
    ],
