--- a/notebooks/0.1-eirike-pdf-parsing.ipynb
+++ b/notebooks/0.1-eirike-pdf-parsing.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original length: 1401, summary length: 353\n",
-      "summary: Blackberry's downfall was due to its failure to recognize the shift in competition from individual smartphones to the broader ecosystem, resulting in an inability to keep up with Apple's expansive network of innovators and the critical mass of innovative apps, despite making competitive pricing, product development, OS upgrades, and marketing efforts.\n"
+      "original length: 1401, summary length: 298\n",
+      "summary: Blackberry's downfall was due to its failure to recognize the shift from product-based competition to ecosystem-based competition, resulting in an inability to keep up with the expansive app offerings of Apple's iOS ecosystem despite competitive pricing, product development, and marketing efforts.\n"
      ]
     }
    ],
